<resources>
    <string name="app_name">YaEnot</string>
    <string name="prifile_menu_notification">Уведомления</string>
    <string name="prifile_menu_exit">Выйти</string>
    <string name="prifile_menu_payment">Оплата</string>
    <string name="prifile_menu_support">Поддержка</string>
    <string name="prifile_menu_questions">Вопрос ответы</string>
    <string name="log_in">Войти</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="forger_password">Забыли пароль?</string>
    <string name="or">Или</string>
    <string name="you_havent_acc_str">У вас нет аккаунта? %1$s</string>
    <string name="sign_in">Зарегистрироваться</string>
    <string name="app_title">Яндекс Практикум</string>
    <string name="select_course_text">Выбрать курс</string>
    <string name="next">Продолжить обучение</string>
    <string name="onboarding_title_1">Изучайте и осваивайте новые специальности</string>
    <string name="onboarding_title_2">Отслеживайте прогресс и получайте сертификаты</string>
    <string name="onboarding_title_3">Обучайтесь с различных устройств</string>
    <string name="onboarding_subtitle_1">Учитесь программированию, дизайну и другим специальностям.</string>
    <string name="onboarding_subtitle_2">Cледите за своим ежедневным прогрессом и по окончании получайте сертификат.</string>
    <string name="onboarding_subtitle_3">Обучайтесь где угодно и следите за своим прогрессом на всех платформах.</string>
    <string name="hint_search">Чему бы вы хотели научиться?</string>
    <string name="course_payment">Оплата курса</string>
    <string name="month_payment">Месячный платеж</string>
    <string name="month_payment_desc">Помесячный платеж\nСумма за 10 месяцев обучения 120 000 руб.</string>
    <string name="go_to_payment">Перейти к оплате</string>
    <string name="full_course">Полный курс</string>
    <string name="full_course_payment_desc">Оплата сразу за 10 месяцев обучения\nВы экономите 20 000 руб</string>
    <string name="user_agreement">Нажимая продолжить вы принимаете условия %1$s и %2$s</string>
    <string name="user_agreement_action_one">“Пользовательского соглашения”</string>
    <string name="user_agreement_action_two">“Оферты”</string>
    <string name="continue_text">Продолжить</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="example_text_for_test">Вас ждет бесплатный курс по основам HTML, CSS, JS. Из него вы поймете, чем занимается web-разработчик, и насколько вам подходит профессия web-разработчик.</string>
    <string name="not_empty_field">Поле не может быть пустым</string>
    <string name="not_now_text">Не сейчас</string>
    <string name="turn_on_text">Включить</string>
    <string name="turn_on_notification_title">Не пропустите новые \nуроки и курсы</string>
    <string name="turn_on_notification_subtitle">Включите уведомления и получайте \nнапоминания о предстоящих уроках.</string>
    <string name="html_css_js">Вы изучили основы HTML, CSS, JS</string>
    <string name="next_block_is_available">Теперь вам доступен следующий блок обучения</string>
    <string name="continue_learning">Продолжить обучение</string>
    <string name="on_home_page">На главную страницу</string>
</resources>