<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="14dp">

    <TextView
        android:id="@+id/textView"
        style="@style/Title.Title5_20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end_cancel_icon_auth_dialog"
        android:src="@drawable/ic_cancel_icon"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Footnote.Footnote_Reg_12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_main_auth_dialog"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/gray_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_main_auth_dialog"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="@dimen/margin_main_auth_dialog"
        android:background="@drawable/background_image_shape_auth"
        app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius_edit_text"
        app:boxCornerRadiusBottomStart="@dimen/box_corner_radius_edit_text"
        app:boxCornerRadiusTopEnd="@dimen/box_corner_radius_edit_text"
        app:boxCornerRadiusTopStart="@dimen/box_corner_radius_edit_text"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"

            android:background="@drawable/background_image_shape_auth" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/email_text_view"
        style="@style/Footnote.Footnote_Reg_12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_main_auth_dialog"
        android:layout_marginTop="12dp"
        android:text="@string/password"
        android:textColor="@color/gray_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_main_auth_dialog"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="@dimen/margin_main_auth_dialog"
        app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius_edit_text"
        app:boxCornerRadiusBottomStart="@dimen/box_corner_radius_edit_text"
        app:boxCornerRadiusTopEnd="@dimen/box_corner_radius_edit_text"
        app:boxCornerRadiusTopStart="@dimen/box_corner_radius_edit_text"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text_view">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/background_image_shape_auth"
            android:drawableEnd="@drawable/ic_visible_icon"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        style="@style/Footnote.Footnote_Reg_12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="@dimen/margin_main_auth_dialog"
        android:text="@string/forger_password"
        android:textColor="@color/gray_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/materialButton"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_main_auth_dialog"
        android:layout_marginTop="16dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/or_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_main_auth_dialog"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_image_shape_auth"
        android:paddingHorizontal="35dp"
        android:paddingVertical="14dp"
        android:src="@drawable/ic_google_icon"
        app:layout_constraintEnd_toStartOf="@id/facebook_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_text_view" />

    <ImageView
        android:id="@+id/facebook_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_image_shape_auth"
        android:paddingHorizontal="35dp"
        android:paddingVertical="14dp"
        android:src="@drawable/ic_facebook_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_text_view" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_main_auth_dialog"
        android:background="@drawable/background_image_shape_auth"
        android:paddingHorizontal="35dp"
        android:paddingVertical="14dp"
        android:src="@drawable/ic_vk_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/facebook_icon"
        app:layout_constraintTop_toBottomOf="@+id/or_text_view" />

    <TextView
        android:id="@+id/textView5"
        style="@style/Footnote.Footnote_Reg_12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="30dp"
        android:paddingEnd="20dp"

        android:text="@string/you_havent_acc_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="53dp"
        android:paddingBottom="30dp"
        android:text="@string/registr"
        android:textColor="@color/primary_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/facebook_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>